test/asm/undefined-dot.out
ERROR:	undefined-dot.asm(3) :
	'.' not defined
